package analizadores;

public class Token {
}
